[package]
name = "luhn_rs"
rust-version = "1.65.0"
edition = "2021"
version = "0.2.0"
authors = ["Ryan Rembert <j.ryan.rembert@gmail.com>"]


[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "luhn_benchmarks"
harness = false