[package]
name = "luhn_tools"
rust-version = "1.65.0"
edition = "2021"
version = "0.2.0"
authors = ["Ryan Rembert <j.ryan.rembert@gmail.com>"]
description = "A fast, minimal implementation of the Luhn algorithm."
license = "MIT"
repository = "https://github.com/jrrembert/luhn_rs"
documentation = "https://docs.rs/luhn_rs"
homepage = "https://github.com/jrrembert/luhn_rs"
keywords = ["luhn", "validation", "checksum", "algorithm", "numbers"]
categories = ["algorithms", "mathematics", "cryptography"]
readme = "README.md"
exclude = [
    "/.github/*",
    "/benches/*",
    "/tests/*",
    "/.gitignore",
]

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "luhn_benchmarks"
harness = false