[package]
name = "luhn_tools"
rust-version = "1.65.0"
edition = "2021"
version = "0.3.0"
authors = ["Ryan Rembert <j.ryan.rembert@gmail.com>"]
description = "A fast, minimal implementation of the Luhn algorithm."
license = "MIT"
repository = "https://github.com/jrrembert/luhn-rs"
documentation = "https://docs.rs/luhn-rs"
homepage = "https://github.com/jrrembert/luhn-rs"
keywords = ["luhn", "validation", "checksum", "algorithm", "numbers"]
categories = ["algorithms", "mathematics", "cryptography"]
readme = "README.md"
exclude = [
    "/.github/*",
    "/benches/*",
    "/tests/*",
    "/.gitignore",
]

[features]
default = ["std"]      # Default features
std = []               # Standard library support
random = ["dep:rand"]  # Random number generation

[dependencies]
rand = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "luhn_benchmarks"
harness = false